Updated GitHub CI, build.sbt, and .scalafmt.conf

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
     - name: Test
       run: sbt test
-  lint:
+  lint
     runs-on: ubuntu-latest
     steps:
     - name: Format
-      run: sbt scalafmtSbtCheck scalafmtCheck test:scalafmtCheck
+      run: sbt scalafmtSbtCheck scalafmtCheck Test/scalafmtCheck
