--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,3 +5,4 @@ runner.dialect = scala3
 indent.defnSite = 2
 rewrite.scala3.convertToNewSyntax = true
 rewrite.scala3.removeOptionalBraces = yes
+rewrite.trailingCommas.style = always
