Fixed error in GitHub CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - name: Test
       run: sbt test
-  lint
+  lint:
     runs-on: ubuntu-latest
     steps:
     - name: Format
