--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,9 @@
 version = 3.3.1
+
 project.git = true
-maxColumn = 80
-runner.dialect = scala3
+
 indent.defnSite = 2
+indent.extendSite = 2
+maxColumn = 80
 rewrite.trailingCommas.style = always
+runner.dialect = scala3
