--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout code
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
+
     - name: Run test
       run: sbt test
   lint:
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout code
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
+
     - name: Check code format
       run: sbt scalafmtSbtCheck scalafmtCheck "Test / scalafmtCheck"
