Minor update for CFG tests

--- a/tests/cfg/literal.cfg
+++ b/tests/cfg/literal.cfg
@@ -12,11 +12,12 @@
     // strings
     assert (= "" "")
     assert (= "abc" "abc")
-    // boolean 
+    // booleans
     assert (= true true)
     assert (= false false)
-    // nullish
+    // null
     assert (= null null)
+    // undefined
     assert (= undefined undefined)
     // constants
     assert (= ~empty~ ~empty~)
