Reformatted code with modified scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,3 +7,6 @@ indent.extendSite = 2
 maxColumn = 80
 rewrite.trailingCommas.style = always
 runner.dialect = scala3
+newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
+newlines.afterCurlyLambdaParams = never
+verticalAlignMultilineOperators = true
