Modified CFG definitions

--- a/tests/cfg/bop-bitwise.cfg
+++ b/tests/cfg/bop-bitwise.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let x = 3
     let y = 5
@@ -20,6 +19,5 @@
     assert (= (^ bx by) 3n)
     assert (= (<< bx by) 4n)
     assert (= (>> 16n 2n) 4n)
-  } -> 2
-  2: <exit>
+  }
 }
