--- a/tests/cfg/bop-equal.cfg
+++ b/tests/cfg/bop-equal.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     // objects
     let x = (new A())[#1]
@@ -55,16 +54,9 @@
     // constants
     assert (= ~empty~ ~empty~)
     assert (! (= ~empty~ ~normal~))
-  } -> 2
-  2: <exit>
+  }
 }
 
-1: g() {
-  3: <entry> -> 4
-  4: <exit>
-}
+1: g() { }
 
-2: h() {
-  5: <entry> -> 6
-  6: <exit>
-}
+2: h() { }
