--- a/tests/cfg/bop-logical.cfg
+++ b/tests/cfg/bop-logical.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let nx = 1.2f
     let ny = 2.0f
@@ -67,6 +66,5 @@
     assert (< nx by)
     assert (! (< x bx))
     assert (< bx by)
-  } -> 2
-  2: <exit>
+  }
 }
