--- a/tests/cfg/uop.cfg
+++ b/tests/cfg/uop.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let x = 1.2f
 
@@ -20,6 +19,5 @@
     // booleans
     assert (= (! true) false)
     assert (= (! false) true)
-  } -> 2
-  2: <exit>
+  }
 }
