--- a/tests/cfg/bop-arith.cfg
+++ b/tests/cfg/bop-arith.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let nx = 1.2f
     let ny = 2.0f
@@ -65,6 +64,5 @@
     assert (= (%% bx y) 1n)
     assert (= (** by y) 32n)
     assert (= (** by ny) 4n)
-  } -> 2
-  2: <exit>
+  }
 }
