--- a/tests/cfg/contains.cfg
+++ b/tests/cfg/contains.cfg
@@ -1,9 +1,7 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let list = (new [4, 5, 3, 7, 5, 2, 3])[#1]
     assert (contains list 4)
     assert (! (contains list 10))
-  } -> 2
-  2: <exit>
+  }
 }
