--- a/tests/cfg/copy.cfg
+++ b/tests/cfg/copy.cfg
@@ -1,5 +1,4 @@
-@main 0: f(x: any) {
-  0: <entry> -> 1
+0: @main f(x: any) {
   1: {
     let obj1 = (new Record("x" -> 1, "y" -> 2))[#1]
     let obj2 = (copy obj1)[#2]
@@ -7,6 +6,5 @@
     assert (! (= obj1 obj2))
     assert (= obj2.x 1)
     assert (= obj2.y 2)
-  } -> 2
-  2: <exit>
+  }
 }
