Added mathematical and string operations to CFG definition

--- a/tests/cfg/bop-arith.cfg
+++ b/tests/cfg/bop-arith.cfg
@@ -29,26 +29,8 @@
     assert (= (% ny nx) 0.8f)
     assert (= (%% ny nx) 0.8f)
 
-    // math values with numbers
-    assert (= (+ x ny) 5.0f)
-    assert (= (- x ny) 1.0f)
-    assert (= (* x ny) 6.0f)
-    assert (= (** x ny) 9.0f)
-    assert (= (/ x ny) 1.5f)
-    assert (= (% y nx) 0.20000000000000018f)
-    assert (= (%% y nx) 0.20000000000000018f)
-    assert (= (+ nx y) 6.2f)
-    assert (= (- nx y) -3.8f)
-    assert (= (* nx y) 6.0f)
-    assert (= (** nx y) 2.4883199999999994f)
-    assert (= (/ nx y) 0.24f)
-    assert (= (% ny x) 2.0f)
-    assert (= (%% ny x) 2.0f)
-
     // strings
-    assert (= (+ sx sy) "abc")
-    assert (= (+ sx nz) "a;")
-    assert (= (- sy z) "b")
+    assert (= (str+ sx sy) "abc")
 
     // big integers
     assert (= (+ bx by) 3n)
@@ -58,11 +40,5 @@
     assert (= (/ bx by) 0n)
     assert (= (% by bx) 0n)
     assert (= (%% by bx) 0n)
-
-    // big integers with other numeric values
-    assert (= (- bx y) -4n)
-    assert (= (%% bx y) 1n)
-    assert (= (** by y) 32n)
-    assert (= (** by ny) 4n)
   }
 }
