--- a/tests/cfg/bop-logical.cfg
+++ b/tests/cfg/bop-logical.cfg
@@ -22,49 +22,27 @@
     assert (^^ true false)
     assert (^^ false true)
     assert (! (^^ false false))
-    assert (== true true)
-    assert (! (== true false))
-    assert (! (== true false))
-    assert (== false false)
+    assert (= true true)
+    assert (! (= true false))
+    assert (! (= true false))
+    assert (= false false)
 
     // absent
     assert (! (= nx absent))
 
     // numbers
     assert (< nx ny)
+    assert (! (= -0.0f +0.0f))
+    assert (== -0.0f +0.0f)
     assert (== nx nx)
     assert (= ny ny)
     assert (! (== nx ny))
-
-    // math values with numbers
-    assert (! (< x ny))
-    assert (! (== x ny))
-    assert (= x 3.0f)
-    assert (! (= 0 -0.0f))
-    assert (== 3 3.0f)
-    assert (< nx y)
-    assert (! (== nx y))
-    assert (= ny 2)
-    assert (! (= 0 -0.0f))
-    assert (== 3.0f 3)
 
     // math values
     assert (! (< y x))
     assert (! (== y x))
 
     // strings
-    assert (< sx sy)
-
-    // big integers with other numeric values
-    assert (= ny by)
-    assert (= by ny)
-    assert (= 1 bx)
-    assert (= bx 1)
-    assert (! (== by 1))
-    assert (< bx nx)
-    assert (< bx x)
-    assert (< nx by)
-    assert (! (< x bx))
-    assert (< bx by)
+    assert (str< sx sy)
   }
 }
