--- a/tests/cfg/uop.cfg
+++ b/tests/cfg/uop.cfg
@@ -2,9 +2,14 @@
   1: {
     let x = 1.2f
 
+    // mathematical values
+    assert (= (abs -3) 3)
+    assert (= (abs -3.23) 3.23)
+    assert (= (floor 2.34) 2)
+    assert (= (floor -2.34) -3)
+
     // numbers
     assert (= (- x) -1.2f)
-    assert (= (~ x) -2f)
 
     // math values
     x = 3
