Add more tests for CFG (#31)

--- a/tests/cfg/expr/pop.cfg
+++ b/tests/cfg/expr/pop.cfg
@@ -1,1 +1,12 @@
-1: {}
+1: {
+  let list = (new [4, 5, 3, 7, 5, 2, 3])[#1]
+  assert (= list.length 7)
+  assert (= (pop < list) 4)
+  assert (= (pop > list) 3)
+  assert (= (pop < list) 5)
+  assert (= (pop > list) 2)
+  assert (= list.length 3)
+  assert (= list[0] 3)
+  assert (= list[1] 7)
+  assert (= list[2] 5)
+}
