Add more tests for CFG (#31)

--- a/tests/cfg/expr/convert.cfg
+++ b/tests/cfg/expr/convert.cfg
@@ -1,1 +1,6 @@
-1: {}
+// TODO implementaion is missing
+1: {
+  //assert (= ([number] x) ???)
+  //assert (= ([bigint] x) ???)
+  //assert (= ([str] x) ???)
+}
