--- a/tests/cfg/inst/push.cfg
+++ b/tests/cfg/inst/push.cfg
@@ -1,1 +1,16 @@
-1: {}
+1: {
+  let list = (new [3, 7, 5])[#1]
+  assert (= list.length 3)
+  push list < 4
+  push 3 > list
+  push list < 5
+  push 2 > list
+  assert (= list.length 7)
+  assert (= list[0] 2)
+  assert (= list[1] 3)
+  assert (= list[2] 3)
+  assert (= list[3] 7)
+  assert (= list[4] 5)
+  assert (= list[5] 4)
+  assert (= list[6] 5)
+}
