--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run test
+      env:
+        ESMETA_HOME: ${{ env.workspace }
       run: sbt test
   lint:
     runs-on: ubuntu-latest
