--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Run test
       env:
         ESMETA_HOME: ${{ github.workspace }}
-      run: echo "$ESMETA_HOME"
+      run: sbt test
   lint:
     runs-on: ubuntu-latest
     steps:
