Fixed error in CFG parser

--- a/tests/cfg/fibo.cfg
+++ b/tests/cfg/fibo.cfg
@@ -1,14 +1,15 @@
 fibo(n: int) {
   1: if (< n 2) then 2 else 3
-  2: return n
+  2: %0 = n -> 7
   3: {
     let n1 = (- n 1)
     let n2 = (- n 2)
   } -> 4
   4: call f1 = clo<fibo>(n1) -> 5
   5: call f2 = clo<fibo>(n2) -> 6
-  6: return (+ f1 f2)
+  6: %0 = (+ f1 f2) -> 7
+  7: return %0
 }
 
-1: call f9 = clo<fibo>(9) -> 2
-2: assert (= f9 34)
+8: call f9 = clo<fibo>(9) -> 9
+9: assert (= f9 34)
