Modify tests for CFG (#31)

--- a/tests/cfg/expr/cont.cfg
+++ b/tests/cfg/expr/cont.cfg
@@ -1,6 +1,18 @@
-// TODO more tests?
-def g() { }
+def f(x: int) {
+  1: assert (= x 1)
 
-1: {
-  let cont1 = cont<g>
+  // captured context
+  2: {
+    let x = 0
+    let cont2 = cont<g>
+    x = 1
+  }
+  3: call y2 = cont2()
 }
+
+def g(x: int) {
+  1: assert (= x 0)
+}
+
+1: let cont1 = cont<f>
+2: call y1 = cont1(1)
