--- a/tests/cfg/expr/ref.cfg
+++ b/tests/cfg/expr/ref.cfg
@@ -1,2 +1,21 @@
-// (interp/util/package:127)
-1: {}
+def f() {
+  1: return 42
+}
+// define reference
+1: {
+  let i = 0
+  let str = "abc"
+  let list = (new [2, 1]) [#1]
+} -> 2
+2: call comp = clo<f>() -> 3
+3: {
+  assert (= i 0)
+  assert (= list[0] 2)
+  assert (= list[1] 1)
+  assert (= str[0] "a")
+  assert (= str[1] "b")
+  assert (= str[2] "c")
+  assert (= comp.Type ~normal~)
+  assert (= comp.Value 42)
+  assert (= comp.Target ~empty~)
+}
