Slightly modified definition of JS AST / More JS parsing rules

--- a/tests/cfg/expr/binary-equal.cfg
+++ b/tests/cfg/expr/binary-equal.cfg
@@ -10,9 +10,9 @@ def h() { }
   assert (= x y)
   assert (! (= x z)) // because `x` and `z` have point to different addresses
   // ASTs
-  let ast1 = |A|<1, 2>()
+  let ast1 = |A|<1>()
   let ast2 = ast1
-  let ast3 = |A|<1, 2>()
+  let ast3 = |A|<1>()
   let ast4 = |A|("abc")
   assert (= ast1 ast2)
   assert (! (= ast1 ast3))
