Add tests for CFG (#31)

--- a/tests/cfg/dec2bin.cfg
+++ b/tests/cfg/dec2bin.cfg
@@ -17,5 +17,5 @@ def dec2bin(n: int) {
   }
 }
 
-5: call b = clo<dec2bin>(35) -> 6
-6: assert (= b 100011)
+1: call b = clo<dec2bin>(35)
+2: assert (= b 100011)
