--- a/tests/cfg/sudomergesort.cfg
+++ b/tests/cfg/sudomergesort.cfg
@@ -28,15 +28,15 @@ def sudomergesort(list: List) {
     %0 = (pop < right)
     push left < %0
   } -> 8
-  10: call sortedleft = clo<sudomergesort>(left) -> 11
-  11: call sortedright = clo<sudomergesort>(right) -> 12
+  10: call sortedleft = clo<sudomergesort>(left)
+  11: call sortedright = clo<sudomergesort>(right)
   12: sortedlist = (list-concat [? sortedleft] [? sortedright])[#1] -> 13
   13: return sortedlist
 }
 
-14: let list = (new [2, 1, 3, 4, 6, 5, 8, 7]) [#1] -> 15
-15: call sortedlist = clo<sudomergesort>(list) -> 16
-16: {
+1: let list = (new [2, 1, 3, 4, 6, 5, 8, 7]) [#1]
+2: call sortedlist = clo<sudomergesort>(list)
+3: {
   assert (= sortedlist[0] 1)
   assert (= sortedlist[1] 2)
   assert (= sortedlist[2] 3)
