--- a/tests/cfg/fibo.cfg
+++ b/tests/cfg/fibo.cfg
@@ -4,12 +4,12 @@ def fibo(n: int) {
   3: {
     let n1 = (- n 1)
     let n2 = (- n 2)
-  } -> 4
-  4: call f1 = clo<fibo>(n1) -> 5
-  5: call f2 = clo<fibo>(n2) -> 6
+  }
+  4: call f1 = clo<fibo>(n1)
+  5: call f2 = clo<fibo>(n2)
   6: %0 = (+ f1 f2) -> 7
   7: return %0
 }
 
-8: call f9 = clo<fibo>(9) -> 9
-9: assert (= f9 34)
+1: call f9 = clo<fibo>(9)
+2: assert (= f9 34)
