--- a/tests/cfg/inst/push.cfg
+++ b/tests/cfg/inst/push.cfg
@@ -1,6 +1,5 @@
-1: {
-  let list = (new [3, 7, 5])[#1]
-  assert (= list.length 3)
+1: let list = (new [3, 7, 5])[#1] -> 2
+2: {
   push list < 4
   push 3 > list
   push list < 5
