--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: Run test
       env:
