--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Run test
       env:
         ESMETA_HOME: ${{ github.workspace }}
+        JVM_OPTS: -Xms16g -Xmx32g -Xss1g -Xmn512m -Dfile.encoding=utf8
       run: sbt test
   lint:
     runs-on: ubuntu-latest
