--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run test
       env:
         ESMETA_HOME: ${{ github.workspace }}
-      run: sbt test
+      run: sbt basicTest
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -24,4 +24,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Check code format
-      run: sbt scalafmtSbtCheck scalafmtCheck "Test / scalafmtCheck"
+      run: sbt format
