Updated yml files for Salck webhooks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,15 @@ jobs:
       env:
         ESMETA_HOME: ${{ github.workspace }}
       run: sbt basicTest
+
+    - name: Report Status
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      if: always()
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -25,3 +34,12 @@ jobs:
 
     - name: Check code format
       run: sbt formatCheck
+
+    - name: Report Status
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      if: always()
