--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,7 +23,7 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: $ESMETA_HOME/client/playwright-report/
         retention-days: 30
 
     - name: Report Status
