--- a/.github/workflows/post-submit.yml
+++ b/.github/workflows/post-submit.yml
@@ -11,6 +11,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Setup JDK
+        uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm-community'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run test
         env:
           ESMETA_HOME: ${{ github.workspace }}
