--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,11 @@
 name: e2e
 on:
   push:
+    branches-ignore:
+      - scalajs
   pull_request:
+    branches-ignore:
+      - scalajs
 env:
   ESMETA_HOME: ${{ github.workspace }}
 jobs:
