--- a/.github/workflows/post-submit.yml
+++ b/.github/workflows/post-submit.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run test
       env:
         ESMETA_HOME: ${{ github.workspace }}
-      run:
+      run: |
         sbt assembly
         ./bin/esmeta test262-test -test262-test:concurrent=32 -test262-test:tycheck -test262-test:timeout=60
         cat ./logs/test262/log
