--- a/.github/workflows/post-submit.yml
+++ b/.github/workflows/post-submit.yml
@@ -26,16 +26,4 @@ jobs:
     - name: Run test
       env:
         ESMETA_HOME: ${{ github.workspace }}
-      run: |
-        sbt assembly
-        ./bin/esmeta test262-test -test262-test:concurrent=32 -test262-test:tycheck -test262-test:timeout=60
-        cat ./logs/test262/log
-
-    - name: Report Status
-      if: failure()
-      uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      run: sbt test262EvalTest
